# mindmapvault-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: build-server-image.yml  offline-parity.yml  security-guard.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.local  TESTING.md
backend/src/: collaboration.rs  config.rs  error.rs  main.rs
backend/src/db/: minio.rs  mod.rs  postgres.rs  sql_store.rs
backend/src/middleware/: auth.rs  mod.rs  request_cleanup.rs
backend/src/models/: access.rs  admin_audit.rs  attachment.rs  collaboration.rs  feedback.rs  mindmap.rs  mod.rs  notifications.rs  plaintext_map.rs  settings.rs  share.rs  user.rs
backend/src/routes/: admin.rs  auth_sql.rs  collaboration_sql.rs  mindmaps_sql.rs  mod.rs  notifications.rs  plaintext_sql.rs  public.rs  share_public.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  local_store.rs  main.rs
docker/: garage.toml
docs/: DEPLOYMENT.md  OSS_FEATURES.md  PASSWORD_ROTATION.md  RELEASE_0.3.26.md  RELEASE_0.3.27.md  RELEASE_0.3.28.md  RELEASE_0.3.29.md  RELEASE_0.3.30.md  SECURITY_GUARD_REPORT_2026-05-24.md  SURFACE_OWNERSHIP.md
frontend_admin/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend_admin/src/: App.tsx  index.css  vite-env.d.ts
frontend_app/: derive_auth_token.mjs  gen_perf_vault.mjs  index.html  offline_capability_contract.json  offline_scan_allowlist.txt  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend_app/dev-dist/: sw.js  workbox-2cde83c0.js
frontend_app/public/: PRIVACY.md  SECURITY.md  TERMS.md  _headers
frontend_app/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend_app/src/api/: account.ts  auth.ts  client.ts  encryptedVault.ts  mindmaps.ts  subscription.ts
frontend_app/src/app-core/: AppRoot.tsx
frontend_app/src/app-core/connectors/: provider.tsx  types.ts
frontend_app/src/app-core/pages/: EditorPage.tsx  VaultsPage.tsx
frontend_app/src/board/: BoardEngine.ts  BoardTypes.ts
frontend_app/src/components/: BoardEditor.css  BoardEditor.tsx  ConfirmDialog.tsx  DesktopTauriBadge.tsx  DynamicLucideIcon.tsx  EncryptedVaultDialog.tsx  LegalDocumentDialog.tsx  Logo.tsx  MindMapColorPicker.tsx  MindMapConstants.ts  MindMapDateDialog.tsx  MindMapEditor.css  MindMapEditor.tsx  MindMapEditor.types.ts  MindMapHelpers.ts  MindMapIconPicker.tsx  MindMapLayout.ts  MindMapNode.tsx  MindMapNotesDialog.tsx  MobileMindMapEditor.tsx  NodeContextMenu.tsx  OfflineBanner.tsx  ProtectedRoute.tsx  PwaInstallButton.tsx  ShortcutsPanel.tsx  SubscriptionDialog.tsx  ThemePanel.tsx  UnlockModal.tsx  VersionHistoryPanel.tsx  lucideIconRegistry.ts
frontend_app/src/crypto/: aes.ts  encryptedVault.ts  kdf.ts  kem.ts  keyRotation.ts  utils.ts  vault.ts
frontend_app/src/hooks/: useAdaptiveEditorMode.ts  useUserLabels.ts
frontend_app/src/pages/: BoardPage.tsx  ChangePasswordPage.tsx  EditorPage.tsx  LandingPage.tsx  LocalUnlockPage.tsx  LoginPage.tsx  ModePage.tsx  ProjectPage.tsx  RegisterPage.tsx  SharedVaultPage.tsx  VaultsPage.tsx
frontend_app/src/platform/: bootstrap.ts
frontend_app/src/storage/: idb.ts  index.ts  local.ts  offline.ts  server.ts  types.ts
frontend_app/src/store/: auth.ts  mode.ts  theme.ts
frontend_app/src/utils/: download.ts  filePreview.ts  freemindExport.ts  freemindImport.ts  freeplaneExport.ts  markdownExport.ts  markdownImport.ts  nodeAttachments.ts  openExternal.ts  pdfExport.ts  pdfThumbnail.ts  planErrors.ts  vaultPreview.ts  wisemappingExport.ts  wisemappingImport.ts  xmindExport.ts  xmindImport.ts
scripts/: check_frontend_offline_parity.mjs  check_no_committed_secrets.mjs  dev-build.sh
scripts/publish_dockerhub/: .env.deploy.example  README.md  docker-compose.yml  setup.sh
tests/: README.md
tests/endpoints/: endpoint-coverage.mjs
tests/performance/: load-test.mjs
