[package]
name = "cryptmind-desktop"
version = "0.3.26"
edition = "2021"

[[bin]]
name = "MindMapVault"
path = "src/main.rs"

[lib]
name = "cryptmind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { version = "0.16", default-features = false, features = ["gtk3"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { version = "0.16", default-features = false }

[build-dependencies]
tauri-build = { version = "2", features = [] }
